Fix Registration Password Meter CSS
- Meter is horribly broken on browsers. Hacks on hacks on hacks.

--- a/app/assets/stylesheets/devise/password.scss
+++ b/app/assets/stylesheets/devise/password.scss
@@ -1,33 +1,41 @@
 meter.password-strength-meter {
   width: 100%;
+  height: 1em;
+
   background: var(--bs-border-color) none;
   border-radius: var(--bs-border-radius);
-}
 
-meter[value="1"].password-strength-meter::-webkit-meter-bar {
-  background: var(--bs-danger);
-}
-meter[value="1"].password-strength-meter::-moz-meter-bar {
-  background: var(--bs-danger);
-}
+  &::-webkit-meter-bar {
+    height: 1em;
+    background: none;
+    border: none;
+    border-radius: var(--bs-border-radius);
+  }
 
-meter[value="2"].password-strength-meter::-webkit-meter-bar {
-  background: var(--bs-warning);
-}
-meter[value="2"].password-strength-meter::-moz-meter-bar {
-  background: var(--bs-warning);
-}
+  &::-webkit-meter-even-less-good-value {
+    background: var(--bs-danger);
+    border-radius: var(--bs-border-radius);
+  }
+  &:-moz-meter-sub-sub-optimum::-moz-meter-bar {
+    background: var(--bs-danger);
+    border-radius: var(--bs-border-radius);
+  }
 
-meter[value="3"].password-strength-meter::-webkit-meter-bar {
-  background: var(--bs-success);
-}
-meter[value="3"].password-strength-meter::-moz-meter-bar {
-  background: var(--bs-success);
-}
+  &::-webkit-meter-suboptimum-value {
+    background: var(--bs-warning);
+    border-radius: var(--bs-border-radius);
+  }
+  &:-moz-meter-sub-optimum::-moz-meter-bar {
+    background: var(--bs-warning);
+    border-radius: var(--bs-border-radius);
+  }
 
-meter[value="4"].password-strength-meter::-webkit-meter-bar {
-  background: var(--bs-success);
-}
-meter[value="4"].password-strength-meter::-moz-meter-bar {
-  background: var(--bs-success);
+  &::-webkit-meter-optimum-value {
+    background: var(--bs-success);
+    border-radius: var(--bs-border-radius);
+  }
+  &:-moz-meter-optimum::-moz-meter-bar {
+    background: var(--bs-success);
+    border-radius: var(--bs-border-radius);
+  }
 }
